# maave

./: .gitignore  LICENSE.txt  README.md  pyproject.toml
src/maave/: __init__.py  _config.py  analyze.py  tracker.py
tests/: test_analyze.py  test_models.py
